add endpoint for search with doc swagger
